<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TigaActivity">

    <TextView
        android:id="@+id/txtTiket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        />

    <TableLayout
        android:id="@+id/tblTable1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTiket"
        android:layout_marginTop="30dp">
        <TableRow>
            <TextView
                android:id="@+id/txtId"
                android:text="@string/Id"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/blue"
                android:layout_marginStart="10dp"
                />
            <EditText
                android:id="@+id/editId"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inId"
                android:textStyle="normal"
                android:textColor="@color/blue"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtNama"
                android:text="@string/nama"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/blue"
                android:layout_marginStart="10dp"
                />
            <EditText
                android:id="@+id/editNama"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inNama"
                android:textStyle="normal"
                android:textColor="@color/blue"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtAsal"
                android:text="@string/asal"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/blue"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                />
            <Spinner
                android:id="@+id/spinAsal"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inasal"
                android:textStyle="normal"
                android:textColor="@color/blue"
                android:layout_marginTop="15dp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtTujuan"
                android:text="@string/tujuan"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/blue"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                />
            <Spinner
                android:id="@+id/spinTujuan"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/intujuan"
                android:textStyle="normal"
                android:textColor="@color/blue"
                android:layout_marginTop="15dp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtHTkt"
                android:text="@string/hargat"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/blue"
                android:layout_marginStart="10dp"
                />
            <EditText
                android:id="@+id/editHtkt"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/inhargat"
                android:textStyle="normal"
                android:textColor="@color/blue"
                />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/txtBayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tblTable1"
        android:text="@string/bayar"
        android:textColor="@color/blue"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        />
    <RadioGroup
        android:id="@+id/rgBayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBayar"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rbCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:textStyle="bold"
            android:textSize="17dp"
            android:textColor="@color/blue"
            android:layout_marginStart="100dp"
            />
        <RadioButton
            android:id="@+id/rbCc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cc"
            android:textStyle="bold"
            android:textSize="17dp"
            android:textColor="@color/blue"
            />
        <RadioButton
            android:id="@+id/rbDebit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit"
            android:textStyle="bold"
            android:textSize="17dp"
            android:textColor="@color/blue"
            />
    </RadioGroup>
    <TableLayout
        android:id="@+id/tblTable2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgBayar"
        android:layout_marginTop="15dp">
        <TableRow>
            <TextView
                android:id="@+id/txtJumB"
                android:text="@string/Beli"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/blue"
                android:layout_marginStart="10dp"
                />

            <EditText
                android:id="@+id/editJumBeli"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:hint="@string/Inbeli"
                android:textColor="@color/blue"
                android:textStyle="normal" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtJam"
                android:text="@string/jam"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/blue"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                />

            <Spinner
                android:id="@+id/spinJam"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:hint="@string/inJam"
                android:textColor="@color/blue"
                android:textStyle="normal" />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/txtBagasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tblTable2"
        android:text="@string/bagasi"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="17sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        />
        <TableLayout
            android:id="@+id/tblTable3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBagasi"
            >
            <TableRow>
                <CheckBox
                    android:id="@+id/chkSuitcase"
                    android:text="@string/koper"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textColor="@color/blue"
                    android:layout_marginStart="100dp"
                    />
                <CheckBox
                    android:id="@+id/chkBox"
                    android:text="@string/Box"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textColor="@color/blue"
                    />
                <CheckBox
                    android:id="@+id/chkBag"
                    android:text="@string/Bag"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textColor="@color/blue"
                    />
            </TableRow>
        </TableLayout>
        />

    <Button
        android:id="@+id/btnPrs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tblTable3"
        android:text="@string/button"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPrs"
        android:text="@string/Output2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        />
</RelativeLayout>
</ScrollView>